# aws-batch-job-runner

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
agent-skills/: sweetspot-enqueue.md  sweetspot-finalize.md  sweetspot-ops.md  sweetspot-reference.md  sweetspot-run.md  sweetspot-scout.md  sweetspot-workers.md
docker/: Dockerfile.worker
docs/: case_study_template.md  cli_ux_audit.md  cost_model.md  expert_review_analysis.md  production_hardening_roadmap.md  release_checklist.md  reliability_contract.md  setup.md
docs/case_studies/: tiny_leela_sf18.md
examples/: deployment.example.json  lanes.example.json  plan.example.json  run_manifest.example.json
examples/hello_world/: hello_worker.py  tasks.jsonl
examples/stockfish_annotation/: README.md
infra/opentofu/: README.md  batch.tf  data.tf  iam.tf  network.tf  observability.tf  outputs.tf  sqs.tf  (+1 more)
scripts/: verify_release.sh
spotbatch/: aws_batch.py  cli.py  s3util.py  spot_lane_manager.py  spot_scout.py  worker.py
sweetspot/: adaptive.py  bootstrap_apply.py  bootstrap_aws.py  bootstrap_doctor.py  bootstrap_plan.py  cli.py  controller.py  cost_model.py  deployment.py  lane_manager.py  lifecycle.py  planner.py  s3util.py  scout.py  setup.py  task_model.py  worker.py
tests/: test_adaptive.py  test_bootstrap_apply.py  test_bootstrap_aws.py  test_bootstrap_doctor.py  test_bootstrap_plan.py  test_cli.py  test_controller.py  test_cost_model.py  test_deployment.py  test_lifecycle.py  test_planner.py  test_s3util.py  test_setup.py  test_worker.py
